frontend/ingress-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller

spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/component: controller

  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingress-nginx
        app.kubernetes.io/component: controller

    spec:
      serviceAccountName: ingress-nginx

      hostNetwork: true

      dnsPolicy: ClusterFirstWithHostNet

      nodeSelector:
        kubernetes.io/os: linux

      containers:
      - name: controller
        image: registry.k8s.io/ingress-nginx/controller:v1.13.2
        args:
        - /nginx-ingress-controller

        - --publish-service=$(POD_NAMESPACE)/ingress-nginx-controller
        - --election-id=ingress-nginx-leader
        - --controller-class=k8s.io/ingress-nginx
        - --ingress-class=nginx

        - --configmap=$(POD_NAMESPACE)/ingress-nginx-controller

        - --validating-webhook=:8443
        - --validating-webhook-certificate=/usr/local/certificates/cert
        - --validating-webhook-key=/usr/local/certificates/key

        ports:
        - name: http
          containerPort: 80
          hostPort: 80
          protocol: TCP

        - name: https
          containerPort: 443
          hostPort: 443
          protocol: TCP

        - name: webhook
          containerPort: 8443
          protocol: TCP

        securityContext:
          runAsUser: 101
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL

        volumeMounts:
        - name: webhook-cert
          mountPath: /usr/local/certificates/
          readOnly: true

      volumes:
      - name: webhook-cert
        secret:
          secretName: ingress-nginx-admission
