frontend/user-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: user-service
  namespace: microservices-app

spec:
  type: ClusterIP

  selector:
    app: user-service

  ports:
    - port: 3000
      targetPort: 3000
